[package]
name = "whiteboards"
version = "0.1.0"
authors = ["David Roundy <daveroundy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

warp = "0.2.4"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

bytes = "0.5"
futures = "0.3"

memorable-wordlist = "0.1.6"
display-as = { version = "0.5.0", features = ["usewarp"] }
auto-args = "0.2"
